# memra-sdk

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  INSTALLATION_GUIDE.md  LICENSE  QUICK_START.md  README.md  REPOSITORY_SEPARATION.md  SERVER_SETUP.md  TEAM_SETUP.md  TEXT_TO_SQL_USAGE_GUIDE.md  app.py  chatbot-widget-fixed.html  context.txt  debug_data_flow.py  docker-compose.yml  fly.toml  mcp_bridge_server.py  memra_system_architecture.md  pyproject.toml  q.py  requirements.txt  setup.py  setup_client.py  setup_old.py  test_llm_upload.py  test_mcp_success.py  test_orchestration.py  test_pdf_processor.py
.github/workflows/: ci.yml  hubspot-delta-sync.yml  pre-meeting-resume-sender.yml
ai-chatbot-backend/qdrant_data/: raft_state.json
demos/: INTERACTIVE_BUILDER_README.md  INTERACTIVE_BUILDER_SUMMARY.md  NATURAL_LANGUAGE_BUILDER_README.md  README.md  interactive_agent_builder.py  natural_language_builder.py  natural_language_demo.py  quick_demo.py  run_interactive_builder.py  run_natural_language_builder.py  test_interactive_builder.py
demos/etl_invoice_processing/: API_UPLOAD_SPEC.md  README_UPLOAD_TESTING.md  REMOTE_API_UPLOAD_IMPLEMENTATION.md  etl_invoice_demo.py  (+14 more)
docs/: database_schema.sql  mcp_integration.md  sample_data.sql
examples/: accounts_payable.py  accounts_payable_client.py  accounts_payable_mcp.py  invoice_processor_with_queries.py
memra/: cli.py
memra-etl-service/: README.md
scripts/: setup_newbie.sh  setup_submodules.sh
ui/: README.md  next.config.js  package.json  setup.sh  tailwind.config.js  vercel.json
(+6 files in other folders)
