[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memra"
version = "0.1.0"
description = "Declarative framework for enterprise workflows - Client SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Memra", email = "info@memra.co"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.8.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://memra.co"
Repository = "https://github.com/memra-platform/memra-sdk"

[project.scripts]
memra = "memra.cli:main"

[tool.setuptools.packages.find]
include = ["memra*"] 